--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,3 +1,29 @@
-<h1>Dashboard#index</h1>
-<p>Find me in app/views/dashboard/index.html.erb</p>
+<h1>Your Task For Today!</h1>
+<h4>Date: <%= Date.today.strftime("%B %d, %Y") %></h4>
+</br>
+</br>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Task</th>
+      <th scope="col">Time</th>
+      <th scope="col">Category</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @tasks_today.each_with_index do |task,index| %>
+    <tr> 
+      <td><%= task.task_name %></td>
+      <td><%= task.time.strftime("%I:%M %p") %></td>
+      <td><%= button_to @article_names[index], category_tasks_path(task.category_id),method: :get %></td>
+    </tr>
+    <% end %>
+
+  </tbody>
+</table> 
+
+
+
+<%= button_to "Show All Categories", categories_path, method: :get %>
+</br>
 <%= button_to "Log Out", destroy_user_session_path, method: :delete %>
