--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,9 +1,9 @@
 <%= form_with scope: :task, url:update_task_path,  method: :patch, local: true do |f| %>
  
     <p>
-        <%= f.label :task_name %>
+        <%= f.label :task %>
         <br />
-        <%= f.text_field :task_name%>
+        <%= f.text_field :task%>
         <br />
         <%= f.label :date %>
         <br />
