--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -12,9 +12,9 @@
     </p>
     
     <p>
-        <%= f.label :task_name %>
+        <%= f.label :task %>
         <br />
-        <%= f.text_field :task_name%>
+        <%= f.text_field :task%>
         <br />
         <%= f.label :date %>
         <br />
