--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,9 +1,10 @@
-<h1>New category</h1>
-
-<%= render "form", category: @category %>
-
-<br>
-
-<div>
-  <%= link_to "Back to categories", categories_path %>
+<div class="p-8">
+    <%= render "navbar" %>
+    <h1 class="font-pacifico text-5xl text-center mb-4">New Category</h1>
+    <div class="bg-gray-800 p-8 flex flex-col items-center w-1/2 rounded-2xl mx-auto">
+        <%= render "form", category: @category %>
+        
+        <%= button_to "Back to categories", categories_path, method: :get , class:"bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded mt-5" %>
+    </div>
 </div>
+
