--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,35 +1,31 @@
-<%= form_with model: [@category, @task], local: true do |f| %>
-    <p>
-        <% if @task.errors.any?  %>
-            <ul>
-                <% @task.errors.full_messages.each do |message| %>
-                    <li>
-                        <%= message %>
-                    </li>
-                <% end %>
-            </ul>
+<div class="p-8">
+    <%= render "navbar" %>
+    <h1 class="font-pacifico text-5xl text-center mb-4">Create Task</h1>
+    <div class="bg-gray-800 p-8 flex flex-col items-center w-1/2 rounded-2xl mx-auto">
+        <%= form_with scope: :task, url:create_task_path({from:params[:from]}),  method: :post, local: true do |f| %>
+            <div class="flex flex-col justify-center text-center">
+                <%= f.label :task ,class:"font-pacifico text-2xl text-white" %>
+                <br />
+                <%= f.text_field :task, size:"20x1" ,class:"text-center", required: true%>
+                <br />
+                <%= f.label :date ,class:"font-pacifico text-2xl text-white"%>
+                <br />
+                <%= f.date_field :date, size:"20x1", class:"text-center", required: true %>
+                <br />
+                <%= f.label :time ,class:"font-pacifico text-2xl text-white"%>
+                <br />
+                <%= f.time_field :time , class:"text-center", required: true %>
+            </div>
+            </br>
+            <div class="flex justify-center">
+                <%= f.submit "Create",class:"bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded" %>
+            </div>
         <% end %>
-    </p>
-    
-    <p>
-        <%= f.label :task %>
-        <br />
-        <%= f.text_field :task%>
-        <br />
-        <%= f.label :date %>
-        <br />
-        <%= f.date_field :date %>
-        <br />
-        <%= f.label :time %>
-        <br />
-        <%= f.time_field :time %>
 
-
-    </p>
-   
-    <p>
-        <%= f.submit %>
-    </p>
-<% end %>
-
-<%= button_to "Back", category_tasks_path(@category), {method: :get} %>
+        <%if params[:from] == "dash"%>
+        <th><%= button_to "Back", dashboard_index_path, method: :get, class:"bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded mt-5" %></th>
+        <% else %>
+        <th><%= button_to "Back", category_tasks_path(@category), method: :get, class:"bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded mt-5" %></th>
+        <% end %>
+    </div>
+</div>
