--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,22 +1,20 @@
 <div class="p-8">
   <%= render "navbar" %>
   <div class="flex flex-col items-center">
-    <div class="font-pacifico text-5xl">
+    <div class="font-pacifico text-5xl flex flex-col align-center text-center ">
       <% if @hours >= 17 %>
-        <span>Good Evening! </span>
+        <span>Good Evening!, </span>
         <% elsif @hours >= 14 %>
-          <span>GoodA fternoon!</span>
+          <span>Good Afternoon!</span>
         <% elsif @hours >=12 %>
           <span>Good Noon!</span>
       <% else %>
         <span>Good Morning!</span>
       <% end %>
-      <span>This is Your Task for Today.<span>
+      <span class="mt-3">Your Task for Today.<span>
     </div>
 
-    </br>
-    <div class="flex flex-col mt-8">
-
+    <div class="flex flex-col">
       <% if params[:from] == "del"%>
         <p class="text-center text-red-600 font-bold"><%= notice %></p>
       <% elsif params[:from] == "new" %>
