--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -41,8 +41,15 @@
       </div>
     </div>
 
-    <%= button_to "Add Tasks", new_category_task_path(@category), method: :get, class:"bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded" %>
-    </br>
-    <%= button_to "Back", categories_path, method: :get , class:"bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded mt-5" %>
+    <% if @tasks.length == 0 %>
+      <div class="font-roboto text-center text-3xl font-bold text-slate-600 border-dashed border-4 border-inherit p-3 italic hover:text-slate-400">
+        <%= link_to "Create your first task here!", new_category_task_path(@category)%>
+      </div>
+    <% else %>
+      <%= button_to "Add Tasks", new_category_task_path(@category), method: :get, class:"bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded" %>
+      </br>
+      <%= button_to "Back to Categories", categories_path, method: :get , class:"bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded mt-5" %>
+    <% end %>
+
   </div>
 </div>
