--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="pt-9 bg-cover bg-no-repeat h-screen w-screen" style="background-image: url('https://res.cloudinary.com/dazff5yba/image/upload/v1668147797/journal_app_fecs0l.jpg')">
   <div class="w-1/3 mx-auto text-center bg-blue-400 h-9/10 rounded-2xl p-10">
-    <h2 class="font-pacifico text-7xl">Welcome to JP Journal Appp</h2>  
+    <h2 class="font-pacifico text-7xl">Welcome to JP Journal App</h2>  
     <div class="flex justify-center gap-x-5 mt-20 ">
     <%= button_to "Log in", dashboard_index_path, method: :get, class:"bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"%>
     <%= button_to "Register", new_user_registration_path, method: :get, class:"bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded"%>
